[project]
name = "flux"
version = "1.0.0"
description = "FLUX: File-based Lightweight Universal Xplainable Dataset Versioning System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
]

[project.scripts]
flux = "flux.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
